[Perf] Combat performance pass and throw system cleanup (#310)
* Fix ability-slot item swapping and refresh behavior (#292)

* Fix: Knife throw impact type, add knife hit packet, ability item cleanup

- Mark knife projectile as unbreakable so handleItemDamageAndCheckIfBroken
  does not destroy itemStack before the ImpactType check runs (root cause of
  the always-knockback bug: fresh items reported max damage due to
  hasDamageValue() returning false, triggering the break path on first hit)
- Switch ImpactType.fromItem check from display.getItemStack() to itemStack
  to avoid PDC loss through the ItemDisplay entity round-trip
- Add Prefab.Attacks.KNIFE_THROW: 1 shard, 15 toughness, 0 soulfire
- Add hitPacket / knockbackFunction overrides to ThrownItem so ability
  throws can supply custom hit resolution without subclassing
- Knife knockback: velocity * 0.2 added to the target's current velocity
- Ability projectiles (tagged ABILITY_ID_KEY) no longer catchable by
  thrower, not registered in InteractiveItemArbiter, and dispose silently
  on entity death instead of dropping a world item

* Update: ItemStack API modernization, input fixes, ability slot restore

ItemStack API:
- Replace new ItemStack(Material.X) with ItemStack.of() across the codebase
- Replace ItemMeta.displayName() / .displayName() with .customName()

Input system:
- Rename InputExecutionTree.hasChildren() -> isTerminal() (clearer semantics)
- Add getPlainTextInputSequence() debug helper to InputExecutionTree
- Reset input tree on charge-action release in InputRegistrar
- Reset input tree in MovementAction when player is holding an ability item

Ability slot / SwordPlayer:
- Add AbilitySlotManager.restoreSlot() and syncSlotItemFromState() so the
  ability slot can be restored after the gunpowder placeholder replaces it
- Fix endHoldingRight() to call restoreSlot() when releasing an ability slot,
  rather than blindly restoring the pre-hold item stack
- Fix onHoldRight() to null-check and clone hand sn